Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-7233

Warning level 4 on VC++8 produces warning C4512

XMLWordPrintable

    • 732c99487682f0be0b201deb1adf697f6d323b00

      When switching on Warning level 4 (-W4) we encounter warnings produced by the qt-library

      • warning C4512: 'QtConcurrent::BlockSizeManager' : assignment operator could not be generated
      • warning C4512: 'QForeachContainer<T>' : assignment operator could not be generated

      They all reference the C4512 - which can be removed -> provide an assignement operator or remove the const for the member:
      -> BlockSizeManager: const int maxBlockSize;
      -> QForeachContainer: const T c;

      Our goal is to compile our software warning free at level 4.
      Of course we could patch this, but this means patch and compile for a lot of colleagues and every coming version.
      The onyl alternative we see it to have this warning globally disabled.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            sorvig Morten Sørvig
            alexfrick Alexander Frick
            Votes:
            12 Vote for this issue
            Watchers:
            18 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes